2014-07-19  David Wohlferd  <dw@LimeGreenSocks.com>

	* gnat_rm.texi: Clean up for makeinfo 5.2.

2014-07-19  David Wohlferd  <dw@LimeGreenSocks.com>

	* gnat_rm.texi (Machine Code Insertions): Clean up.

2014-07-18  Robert Dewar  <dewar@adacore.com>

	* exp_ch7.adb: Minor reformatting.

2014-07-18  Claire Dross  <dross@adacore.com>

	* sem_aux.ads (Get_Binary_Nkind): New function that returns
	the Node_Kind value of an entity defining a binary operator.
	(Get_Unary_Nkind): New function that returns the Node_Kind value
	of an entity defining a unary operator.

2014-07-18  Pascal Obry  <obry@adacore.com>

	* sysdep.c: comment update.
	* adaint.c (__gnat_fputwc): Use wchar_t on a limited set of
	platforms where it is known to be supported.

2014-07-18  Thomas Quinot  <quinot@adacore.com>

	* sem_dist.adb (Process_Remote_AST_Declaration): Need
	to set Fat_Type's Ekind in order to be able to use its
	Corresponding_Remote_Type attribute.

2014-07-18  Hristian Kirtchev  <kirtchev@adacore.com>

	* einfo.adb Last_Aggregate_Assignment is now Node 30.
	(Last_Aggregate_Assignment): Include
	constants in the assertion. Update the underlying node.
	(Set_Last_Aggregate_Assignment): Include constants in the
	assertion. Update the underlying node.	(Write_Field11_Name):
	Remove the entry for Last_Aggregate_Assignment.
	(Write_Field30_Name): Add an entry for Last_Aggregate_Assignment.
	* einfo.ads Update the node designation and usage of attribute
	Last_Aggregate_Assignment.
	* exp_aggr.adb (Expand_Array_Aggregate): Store the last
	assignment statement used to initialize a controlled object.
	(Late_Expansion): Store the last assignment statement used to
	initialize a controlled record or an array of controlled objects.
	* exp_ch3.adb (Expand_N_Object_Declaration): Default
	initialization of objects is now performed in a separate routine.
	(Default_Initialize_Object): New routine.
	* exp_ch7.adb (Build_BIP_Cleanup_Stmts): Add formal parameter
	Obj_Id. Update the comment on usage.